change theme name to Gulzar

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /**
-* Theme Name: Guldukkan
+* Theme Name: Gulzar
 * Author: AJI
 * Theme URI: http://www.menzil.cn
 * Description: Custom theme for AyBalam.com
